part1/ex1.07/mainapplication/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapplication-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapplication 
  template:
    metadata:
      labels:
        app: mainapplication
    spec:
      containers:
        - name: mainapplication
          image: ptuomola/mainapplication:0.2.0
