part1/ex1.07/mainapplication/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mainapplication-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapplication-svc
          servicePort: 2346
